src/main/resources/public/sass/global/specifics/_diary.scss
body {
  width: auto !important; /* Firefox will set width as auto */
}

.small { font-size: 0.9em; }
.normal { font-size: 1em; }
.large { font-size: 1.1em; }
.text-xl { font-size: 1.5em; }
.float-left { float:left; }
.pointer { cursor:pointer; }
.margin10v { margin: 10px 0; }
.text-left { text-align:left!important; }
.text-right { text-align: right !important; }
.text-center { text-align:center!important; }
.margin-auto { margin:auto; }

.cursorDefault {
  cursor: default;
}

.cursorPointer {
  cursor: pointer;
}

.min-height-textarea {
  min-height: 60px;
}

input[type="number"] {
  min-width: 35px;
}
.inline-block { display: inline-block; }
.flex { display: flex; }
.space-around { justify-content: space-around; }

.schedule .days .day .timeslots .timeslot {
  cursor: default;
}

.schedule .days .day.single {
  width: 100%
}

tr th label input[type=checkbox]:checked + span::before {
  border-color: #fff;
}

.sidebar {
  margin-right: 20px;
  switch {
    section .row {
      margin: 5px 0;
    }
    .switch .tick {
      background: #78daff;
      &:before {
        background: #2a9cc8;
      }
    }
  }
}

.help{
  content:'\e835';
  font-family:"generic-icons";
  -webkit-font-smoothing:antialiased;
  -moz-osx-font-smoothing:grayscale;
  background-image:none;
}

.help-color-bloc {
  width: 40px;
  height: 20px;
  display: inline-block;
  position: relative;
  top: 4px;
  border: 1px solid black;
}

i.rack2::before {
  content: "\e80d";
  font-family:"generic-icons";
  -webkit-font-smoothing:antialiased;
  -moz-osx-font-smoothing:grayscale;
  background-image:none;
}

i.cahier-textes2::before {
  content: "\e86f";
  font-family:"generic-icons";
  -webkit-font-smoothing:antialiased;
  -moz-osx-font-smoothing:grayscale;
  background-image:none;
}

.color-bloc {
  width: 40px;
  height: 20px;
  display: inline-block;
  position: relative;
  top: 4px;
  border: 1px solid black;
}

.show-i-hover:hover {
  i {
    display: initial;
  }
}
.show-i-hover {
  i {
    display: none;
  }
}

.edit-visa-icons{
  font-size: 20px;
  color: #888;
}

.visa-being-updated {
  background-color: rgba(255, 133, 0, 0.3803921569);
}

.date-picker-sm {
  width: 80px;
}


.tab-button {
  display: inline-block;
  text-align: right;
  border: 2px solid #4bafd5;
  border-radius: 5px;
  padding: 0 5px 0 5px;

  &.selected {
    background: #4bafd5 !important;
    color: #fff;
  }
}

.visa-diary {
  .read-only-description {
    max-height: none;
  }
}
.read-only-description {
  min-height: max-content;
  max-height: max-content;
  overflow-y: auto;
  height: auto;
  padding: 10px;
  background: #fff;
  border: 1px dashed #4bafd5 !important;
  margin-top: 10px;
  margin-bottom: 10px;
}

.workloadDay {
  padding: 3px 8px;
  font-size: 16px;
  border: solid 1px #aaa;
  color: #333;
}

.workloadDay.red {
  background-color: tomato;
}

.workloadDay.yellow {
  background-color: khaki;
}

.workloadDay.green {
  background-color: limegreen;
}

.homework-progress {
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  &.inside-homework-view {
    flex-direction: row-reverse;
    position: absolute;
    right: 40px;
    top: 6px;
    padding: 5px;
    border-radius: 5px;
    background-color: #f9f9f9;
    border: 1px solid grey;
    width: 135px;
  }
}

.icon-upload-cloud:before {
  content: '\e848';
  font-family: "generic-icons";
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: none;
}

.width-15 {
  width: 15%;
}

.margin-bottom-7 {
  margin-bottom: 7px;
}

span.no-style {
  font-family: "Roboto";
}

.tooltip{
  z-index: 0;
}

